add goBack font

--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,7 @@ Div .pizzaImg {
     height: auto;
     width: 15%;
 }
+
+.goBack{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
